# marm_A1

./: README.md  samples_my_handeye_calibration.yaml
.history/arm_controller/arm_controller/: arm_controller_20260204142210.py  arm_controller_20260216122837.py  arm_controller_20260216132802.py
.history/capture_image/launch/: capture_image.launch_20260216132526.py  capture_image.launch_20260216132538.py
.history/easy_handeye2/: CMakeLists_20260225101708.txt  CMakeLists_20260225102100.txt  CMakeLists_20260225103040.txt  CMakeLists_20260225103120.txt  CMakeLists_20260225104010.txt  README_20260225101227.md  README_20260225101623.md  README_20260225101628.md  README_20260225102139.md  package_20260225102623.xml
.history/easy_handeye2/config/: calibration_params_20260204113632.yaml  calibration_params_20260225104321.yaml  calibration_params_20260225105412.yaml  calibration_params_20260225105456.yaml  calibration_params_20260225112928.yaml
.history/easy_handeye2/launch/: calibrate.launch_20260225101136.py
.history/easy_handeye2/msg/: HandeyeCalibration_20260225102619.msg  SampleList_20260225102618.msg
.history/easy_handeye2/src/: calibration_backend_opencv_20260225105436.cpp  calibration_backend_opencv_20260225105703.cpp  calibration_backend_opencv_20260225115809.cpp  handeye_server_node_20260225101123.cpp  handeye_server_node_20260225102100.cpp  handeye_server_node_20260225102125.cpp  handeye_server_node_20260225103040.cpp  handeye_server_node_20260225103059.cpp  handeye_server_node_20260225103105.cpp  handeye_server_node_20260225104212.cpp  handeye_server_node_20260225105427.cpp  handeye_server_node_20260225115817.cpp
.history/easy_handeye2/srv/: ComputeCalibration_20260225102009.srv  ComputeCalibration_20260225103226.srv  SaveCalibration_20260225102009_20260227_175617.srv  TakeSample_20260225102009.srv  TakeSample_20260225103040.srv
A1_description/: CMakeLists.txt  package.xml
A1_description/launch/: display.launch.py  display_ros1.launch  gazebo.launch
A1_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
A1_description/urdf/: A1_description.csv  A1_description.urdf
A1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
A1_moveit_config/config/: A1_description.ros2_control.xacro  A1_description.srdf  A1_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
A1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm_controller/: package.xml  readme.md  requirements.txt  setup.py
arm_controller/arm_controller/: arm_reader_node.py
arm_controller/config/: servo_calibration.yaml  servo_calibration_guide.md
capture_image/: .gitignore  CMakeLists.txt  RGB_DETECT_README.md  package.xml  readme.md  二维码.wps  标定板.wps
capture_image/include/: capture_image.hpp
capture_image/launch/: capture_image.launch.py
capture_image/rviz/: three_cam.rviz
capture_image/src/: aruco_object_pose_node.cpp  capture_image.cpp  main.cpp  rgb_detect_pose_node.cpp
capture_image/test/: CMakeLists.txt  readme.md  test_1.cpp
custom_interface/: CMakeLists.txt  package.xml
custom_interface/srv/: SetArmTargetPose.srv
easy_handeye2/: CMakeLists.txt  README.md  package.xml
easy_handeye2/config/: eye_in_hand_example.yaml  eye_on_base_example.yaml
easy_handeye2/include/easy_handeye2/: calibration_backend_opencv.hpp  handeye_calibration.hpp  handeye_sampler.hpp  handeye_server.hpp
easy_handeye2/launch/: handeye.launch.py
easy_handeye2/src/: handeye_calibration.cpp  handeye_sampler.cpp
models/: A1机械臂（不含底板）.SLDASM  Am1完整体.SLDASM  GB6170-M3-ZN-10.SLDPRT  GB6170-M4-ZN-10.SLDPRT  GB818-M3X8-ZN-4.8.SLDPRT  GB818-M4X10-4.8.SLDPRT  GB818-M4X18.SLDPRT  GB818-M4X35.SLDPRT  GB_CROSS_SCREWS_TYPE1 M3X38-38  H type-N.SLDPRT  GB_CROSS_SCREWS_TYPE1 M3X5-5  Z type-N.sldprt  M4X14双通铜柱.SLDPRT  M4X35双通铜柱.SLDPRT  中u.SLDPRT  中长小u连接件.SLDPRT  云台大圆环.SLDPRT  云台小圆盘.SLDPRT  云台底板.SLDPRT  合金机械爪.SLDASM  大u.SLDPRT  大u1.SLDPRT  大轴承.SLDPRT  小圆盘+舵盘.SLDASM  总线单轴舵机.SLDPRT  总线双轴舵机1.SLDPRT  新大底板.SLDPRT  机械臂加强筋.SLDPRT  金属主舵盘1.SLDPRT  金属从舵盘.SLDPRT  长方体连接.SLDPRT  长窄u支架.SLDPRT  零件3.SLDPRT
moveit_controller_server/: CMakeLists.txt  moveit.rviz  package.xml
moveit_controller_server/config/: load_kinematics.yaml
moveit_controller_server/nouse/: ._a2_control_behaviors.cpp  a2_control_behaviors.cpp  a2_control_behaviors.hpp  a2_control_behaviors_give.cpp  a2_control_behaviors_give.hpp  moveit_controller_server copy.cpp  moveit_controller_server copy_0419.cpp  moveit_controller_server copy_0420.cpp
moveit_controller_server/src/: arm_test.cpp  marm_demo.cpp  marm_demo.hpp  moveit_controller_server.cpp  moveit_joint_states_repub.cpp  test.cpp
moveit_controller_server/srv/: SetArmAction.srv  SetArmJointValues.srv
